[package]
name = "cachers"
version = "0.1.0"
authors = ["Alex Snaps <alex.snaps@gmail.com>"]
license = "Apache-2.0"
keywords = ["cache"]
repository = "https://gitlab.com/alexsnaps/cachers"
readme = "README.adoc"
homepage = "https://gitlab.com/alexsnaps/cachers"
documentation = "https://docs.rs/cachers"
description = "A caching library"
edition = "2018"

[dependencies]
lazy_static = "1.4.0"

[dev-dependencies]

[features]
unstable = []

[lib]
name = "cachers"
path = "src/lib.rs"

[[bin]]
name = "example"
path = "src/example.rs"
