[package]
name = "cachers"
version = "0.1.0"
authors = ["Alex Snaps <alex.snaps@gmail.com>"]
license = "Apache-2.0"
keywords = ["cache"]
repository = "https://gitlab.com/alexsnaps/cachers"
readme = "README.adoc"
homepage = "https://gitlab.com/alexsnaps/cachers"
documentation = "https://docs.rs/cachers"
description = "A caching library"
edition = "2018"

[dependencies]
futures = { version = "0.3" }

[dev-dependencies]
tokio = { version = "0.2", features = ["full"] }

[features]
unstable = []
